--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,47 @@
 </head>
 <body>
 
-
+  <nav>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="navbar-brand"><%= link_to "Cookr", root_path %></div>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-left">
+            <li><%= link_to "Chefs", chefs_path%></li>
+            <li><%= link_to "Menus", menus_path%></li>
+            <% if @current_user.present? %>
+            <li><%= link_to "Events", events_path%></li>
+            <li><%= link_to "Messages"%></li>
+            <li><a href="/users/<%=@current_user.id%>">Profile</a></li>
+            <li><%= link_to "Logout #{@current_user.username.capitalize}", login_path, :method => :delete%></li>
+            <li class="dropdown">
+              <% if @current_user.admin? %>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMIN<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-header">Admin</li>
+                <li><%= link_to "All Users" %></li>
+                <li><%= link_to "All Users" %></li>
+              <% end %>
+              </ul>
+            </li>
+            <% else %>
+              <li><%= link_to "Signup" %></li>
+              <li><%= link_to "Login" %></li>
+            <% end %>
+          </ul>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
 
 <%= yield %>
 
