--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Cookr</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -28,7 +28,7 @@
             <li><%= link_to "Events", events_path%></li>
             <li><%= link_to "Messages"%></li>
             <li><a href="/users/<%=@current_user.id%>">Profile</a></li>
-            <li><%= link_to "Logout #{@current_user.username.capitalize}", login_path, :method => :delete%></li>
+            <li><%= link_to "Logout #{@current_user.first_name.capitalize}", login_path, :method => :delete%></li>
             <li class="dropdown">
               <% if @current_user.admin? %>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMIN<b class="caret"></b></a>
