--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             </li>
             <% else %>
               <li><%= link_to "Signup", new_user_path %></li>
-              <li><%= link_to "Login" %></li>
+              <li><%= link_to "Login", login_path %></li>
             <% end %>
           </ul>
         </ul>
