--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Menus controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.thumb{
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  margin: 30px;
+}
+
+.menu{
+  display: inline-block;
+  margin-bottom: 30px;
+
+}
