--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -2,43 +2,15 @@
 
 <h1>Menus</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Cuisine</th>
-      <th>Description</th>
-      <th>Pricepp</th>
-      <th>Dietry</th>
-      <th>Gluten free</th>
-      <th>Vego</th>
-      <th>Title</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <div class="menu">
     <% @menus.each do |menu| %>
-      <tr>
-        <td><%= menu.user_id %></td>
-        <td><%= menu.cuisine %></td>
-        <td><%= menu.description %></td>
-        <td><%= menu.pricePP %></td>
-        <td><%= menu.dietry %></td>
-        <td><%= menu.gluten_free %></td>
-        <td><%= menu.vego %></td>
-        <td><%= menu.title %></td>
-        <td><%= menu.image %></td>
-        <% if @current_user.present? && @current_user.admin? %>
-        <td><%= link_to 'Show', menu %></td>
-        <td><%= link_to 'Edit', edit_menu_path(menu) %></td>
-        <td><%= link_to 'Destroy', menu, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+       <div class="thumb">
+         <%= link_to (image_tag menu.image, :class => "thumb"), menu %>
+         <p><%= link_to menu.title, menu %></p>
+      <% if @current_user.present? && @current_user.admin? %>
+        <p><%= link_to 'Edit', edit_menu_path(menu) %></p>
+        <p><%= link_to 'Destroy', menu, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </div>
+    </div>
       <% end %>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-<%= link_to 'New Menu', new_menu_path %>
