--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -13,5 +13,16 @@
 .menu{
   display: inline-block;
   margin-bottom: 30px;
+}
 
+th{
+  padding: 10px;
+  text-align: center;
+  display: inline-block;
+}
+
+td{
+  padding: 10px;
+  text-align: center;
+  display: inline-block;
 }
