--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,10 +6,10 @@
 
 h1{
   text-align: center;
-  margin-top: 100px;
 }
 
 th, td{
   padding: 10px;
   text-align: center;
+  display: inline-block;
 }
