--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,16 +1,22 @@
 <p id="notice"><%= notice %></p>
 
+
+<div class="main">
+
 <h1>Menus</h1>
+
+<p>Looking for something specific? </p>
+<input type="text" id="search" placeholder="Search">
+<table id="table">
 
   <div class="menu">
     <% @menus.each do |menu| %>
-       <div class="thumb">
-         <%= link_to (image_tag menu.image, :class => "thumb"), menu %>
-         <p><%= link_to menu.title, menu %></p>
-      <% if @current_user.present? && @current_user.admin? %>
-        <p><%= link_to 'Edit', edit_menu_path(menu) %></p>
-        <p><%= link_to 'Destroy', menu, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      </div>
-    </div>
-      <% end %>
-    <% end %>
+     <tr>
+       <td>
+          <%= link_to (image_tag menu.image, :class => "thumb"), menu %>
+          <%= link_to menu.title, menu %>
+      <td>
+    </tr>
+  </div>
+   <% end %>
+</div>
