--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="main">
+
+
 <h1>Editing Menu</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @menu %> |
 <%= link_to 'Back', menus_path %>
+</div>
