--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= form_for @user, html: {multipart: true} do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -27,6 +27,16 @@
   </div>
 
   <div class="field">
+    <%= f.label :phone %><br>
+    <%= f.text_field :phone %>
+  </div>
+
+  <div class="field">
+    <%= f.label :image, 'Upload profile picture' %><br>
+    <%= f.file_field :image %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %><br>
     <%= f.password_field :password, :required => true %>
   </div>
@@ -37,19 +47,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </div>
-
-  <div class="field">
     <%= f.label :chef, "Are you a chef for hire?" %><br>
     <%= f.check_box :chef %>
   </div>
 
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.text_area :image %>
-  </div>
+
 
   <div class="field">
     <%= f.label :bio %><br>
