add menu pict to main page

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -18,6 +18,12 @@
 <div class="menus">
   <h2>MENUS</h2>
 
+<div class="displayMenus">
+  <% @menus.each do |menu| %>
+    <%= link_to (image_tag menu.image), menu %>
+  <%end %>
+</div>
+
 
 </div>
 
