added create menu button in chefs -display

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,94 +9,27 @@
 // }
 
 
-/*keyframe animations*/
-.first {
- -webkit-animation: bannermove 30s linear infinite;
-    -moz-animation: bannermove 30s linear infinite;
-     -ms-animation: bannermove 30s linear infinite;
-      -o-animation: bannermove 30s linear infinite;
-         animation: bannermove 30s linear infinite;
+
+.cover-container {
+    height: 180px;
+    width: 100%;
+    white-space: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
-
-@keyframes "bannermove" {
- 0% {
-    margin-left: 0px;
- }
- 100% {
-    margin-left: -2125px;
- }
-
+.cover-item {
+    position: relative;
+    display: inline-block;
+    margin: 8px 8px;
+    box-shadow: 2px 2px 4px #bbb;
+    border-top-right-radius: 4px;
+    width: 116px;
+    height: 158px;
+    vertical-align: bottom;
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
-@-moz-keyframes bannermove {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
-
-}
-
-@-webkit-keyframes "bannermove" {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
-
-}
-
-@-ms-keyframes "bannermove" {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
-
-}
-
-@-o-keyframes "bannermove" {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
-}
-
-.photobanner {
-	height: 233px;
-	width: 3550px;
-	margin-bottom: 80px;
-}
-
-.photobanner img {
-	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	-ms-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-}
-
-.photobanner img:hover {
-	-webkit-transform: scale(1.1);
-	-moz-transform: scale(1.1);
-	-o-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	transform: scale(1.1);
-	cursor: pointer;
-
-	-webkit-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
-	-moz-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
-	box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
-}
-
-
-
-
 .pages_thumbDiv{
   height: 200px;
   width: 200px;
@@ -113,19 +46,6 @@
   display: block;
   height: 200px;
   width: 200px;
-}
-
-.background {
-  background-attachment: fixed;
-  background-image: url(http://ww1.prweb.com/prfiles/2012/05/22/9531901/Moevenpick_Hotels_and_Resorts_Chef_preparing_food_for_thought.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-  background-position: center;
-  padding-top: 10%;
-  padding-bottom: 50%;
-  margin: 0 auto;
-  opacity: 0.6;
 }
 
 .about {
@@ -161,4 +81,18 @@
 .displayMenus img {
 width: 150px;
 height: 150px;
+}
+
+
+.background {
+ background-attachment: fixed;
+ background-image: url(http://ww1.prweb.com/prfiles/2012/05/22/9531901/Moevenpick_Hotels_and_Resorts_Chef_preparing_food_for_thought.jpg);
+ background-size: cover;
+ background-repeat: no-repeat;
+ position: relative;
+ background-position: center;
+ padding-top: 10%;
+ padding-bottom: 50%;
+ margin: 0 auto;
+ opacity: 0.6;
 }
