--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,14 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 
 h1{
   text-align: center;
-}
-
-th, td{
-  padding: 10px;
-  text-align: center;
-  display: inline-block;
 }
