--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -4,7 +4,7 @@
 <div class="background">  </div>
 
 <div class="about">
-  <h2>ABOUT</h2>
+  <h1>Cookr</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -16,7 +16,7 @@
 </div>
 
 <div class="menus">
-  <h2>MENUS</h2>
+  <h2>Menus</h2>
 
 <div class="displayMenus">
   <% @menus.each do |menu| %>
@@ -28,7 +28,7 @@
 </div>
 
 <div class="chefs cf">
-  <h2>CHEFS</h2>
+  <h2>Chefs</h2>
   <div class="photoBanner cf">
       <img src="<%= @users.last.image %>" class="first pages_thumbDiv cf" />
     <% @users.each do |user| %>
