--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -13,10 +13,17 @@
        <td>
         <div class="thumb">
           <%= link_to (image_tag menu.image), menu %>
-          <%= link_to menu.title, menu %>
+          <%= link_to truncate(menu.title, length: 23), menu %>
         </div>
       <td>
     </tr>
-  </div>
    <% end %>
+
+
+ </div>
+
+   <% if @current_user.present? && @current_user.chef? || @current_user.admin? %>
+   <%= link_to "Create Menu", new_menu_path %>
+   <% end %>
+
 </div>
