--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="main">
+
+
 <h1>Editing Event</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @event %> |
 <%= link_to 'Back', events_path %>
+</div>
