--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,12 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/slick-theme.css"/>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>  <script type="text/javascript" src="app/assets/javascripts/slick.min.js"></script>
 </head>
 <body>
   <nav>
@@ -51,5 +57,6 @@
 
       <%= yield %>
   </div>
+
 </body>
 </html>
