--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -31,10 +31,10 @@
   <h2>CHEFS</h2>
   <div class="row-fluid">
     <div class="col-lg-12 col-md-10 ">
-      <div class="cover-container cf">
+      <div class="autoplay cf">
         <% @users.each do |user| %>
           <%= user.first_name%>
-          <div class="col-lg-12 col-md-2 cover-item cf">
+          <div class="pages_thumbDiv cf">
             <img src="<%=user.image %>"/>
           </div>
         <% end %>
