add chefs profile to menus

--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -1,20 +1,18 @@
-<%= form_for(@menu) do |f| %>
-  <% if @menu.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@menu.errors.count, "error") %> prohibited this menu from being saved:</h2>
+<% if @menu.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@menu.errors.count, "error") %> prohibited this menu from being saved:</h2>
 
-      <ul>
-      <% @menu.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <ul>
+    <% @menu.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
   </div>
+<% end %>
+
+
+<%= form_for @menu do |f| %>
+
   <div class="field">
     <%= f.label :cuisine %><br>
     <%= f.text_field :cuisine %>
