--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -13,7 +13,7 @@
        <td>
         <div class="thumb">
           <%= link_to (image_tag menu.image), menu %>
-          <%= link_to truncate(menu.title, length: 23), menu %>
+          <%= link_to truncate(menu.title, length: 23) %>
         </div>
       <td>
     </tr>
@@ -22,7 +22,7 @@
 
  </div>
 
-   <% if @current_user.present? && @current_user.chef? || @current_user.admin? %>
+   <% if @current_user.present? && (@current_user.chef? || @current_user.admin?) %>
    <%= link_to "Create Menu", new_menu_path %>
    <% end %>
 
