--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -5,8 +5,24 @@
 
 <h1>Menus</h1>
 
+
 <input class="search-query form-control" type="search" results="5" id="search" placeholder="Looking for any type of cuisine? ">
 <table id="table">
+
+  <% if @current_user.present? && ((@current_user.menus).present? || @current_user.admin?) %>
+  <h2>My Menus</h2>
+     <% @current_user.menus.each do |mymenu| %>
+       <div class="thumb">
+         <%= link_to (image_tag mymenu.image), mymenu %>
+      </div>
+     <% end %>
+  <br>
+  <%= link_to "Add Menu", new_menu_path %>
+  <hr>
+  <h2>All Menus</h2>
+     <% end %>
+
+
   <div class="menu">
     <% @menus.each do |menu| %>
      <tr>
@@ -18,12 +34,10 @@
       <td>
     </tr>
    <% end %>
+</table>
+
 
 
  </div>
-
-   <% if @current_user.present? && (@current_user.chef? || @current_user.admin?) %>
-   <%= link_to "Create Menu", new_menu_path %>
-   <% end %>
 
 </div>
