--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -15,17 +15,22 @@
     </p>
 </div>
 
-<div class="menus">
+<div class="menus cf">
   <h2>MENUS</h2>
 
-<div class="displayMenus">
+  <div class="row-fluid">
+    <div class="col-lg-12 col-md-10 ">
+      <div class="autoplay cf">
   <% @menus.each do |menu| %>
-    <%= link_to (image_tag menu.image), menu %>
+    <div class="pages_thumbDiv cf">
+      <%= link_to (image_tag menu.image), menu %>
+    </div>
   <%end %>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-</div>
+<br>
 
 <div class="chefs cf">
   <h2>CHEFS</h2>
