display list of chefs in events

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -43,9 +43,9 @@ nav a{
 
 }
 .navbar-inverse .navbar-nav li a{
-  color: white;
+  color: #9E9E9E;
   &:hover {
-    color: gray;
+    color: #77AFE0;
   }
 }
 
