--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
       <ul>
       <% @event.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,10 +10,16 @@
     </div>
   <% end %>
 
+
   <div class="field">
-    <%= f.label :time %><br>
+    <%= f.label :description %><br>
+    <%= f.text_field :description %>
+  </div>
+  <div class="field">
+    <%= f.label :when %><br>
     <%= f.datetime_select :time %>
   </div>
+
   <div class="field">
     <%= f.label :suburb %><br>
     <%= f.text_field :suburb %>
@@ -25,15 +30,11 @@
   </div>
   <div class="field">
     <%= f.label :chef_id %>
-    <%= f.select :chef_id, User.pluck(:first_name,:id), :include_blank => true %>
+    <%= f.select :chef_id, (User.where(:chef => true)).pluck(:first_name,:id)%>
   </div>
   <div class="field">
     <%= f.label :menu_id %><br>
     <%= f.select :menu_id, Menu.pluck(:title,:id), :include_blank => true %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
   </div>
   <div class="field">
     <%= f.label :guests %><br>
