--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,6 +1,9 @@
+<div class="main">
+
 <h1>Editing Message</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @message %> |
 <%= link_to 'Back', messages_path %>
+</div>
