--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -61,5 +61,17 @@ input[type=search] {
   vertical-align: top;
   max-width: 40%;
   text-align: left;
+}
 
+.linkButton {
+  text-align: center;
+  background-color: black;
+  color: white;
+  border-radius: 10%;
+  padding: 10px;
+  margin: 20px;
+  &:hover{
+    color: white;
+    box-shadow: 2px 2px gainsboro;
+  }
 }
