--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -34,12 +34,17 @@
 <% if @menu.vego.present? %>
   <h3>Vego</h3>
 <% end %>
+<hr>
+<%= link_to ('Book this Menu'), new_event_path, :class => 'linkButton' %>
+
 
 </div>
 
-<hr>
 
-<% if @current_user.present? && (@current_user.chef? || @current_user.admin?) %>
+
+
+<hr>
+<% if @current_user.present? && (@current_user.id == @menu.user.id) %>
 <%= link_to 'Destroy', @menu, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Edit', edit_menu_path(@menu) %> |
 <%= link_to 'Back', menus_path %>
