authoriseMEnu only for chef

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,16 +10,14 @@
     </div>
   <% end %>
 
-
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
   <div class="field">
-    <%= f.label :when %><br>
-    <%= f.datetime_select :time %>
-  </div>
-
+     <%= f.label :time %><br>
+     <%= f.datetime_select :time %>
+   </div>
   <div class="field">
     <%= f.label :suburb %><br>
     <%= f.text_field :suburb %>
