--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -21,11 +21,11 @@
   <div class="row-fluid">
     <div class="col-lg-12 col-md-10 ">
       <div class="autoplay cf">
-  <% @menus.each do |menu| %>
-    <div class="pages_thumbDiv cf">
-      <%= link_to (image_tag menu.image), menu %>
-    </div>
-  <%end %>
+        <% @menus.each do |menu| %>
+          <div class="pages_thumbDiv cf">
+            <%= link_to(image_tag(menu.image, :class => 'thumb'), menu) %>
+          </div>
+        <%end %>
       </div>
     </div>
   </div>
@@ -35,15 +35,17 @@
 <div class="chefs cf">
   <h2>CHEFS</h2>
   <div class="row-fluid">
-    <div class="col-lg-12 col-md-10 ">
+    <div class="col-lg-12 col-md-10">
+
       <div class="autoplay cf">
         <% @users.each do |user| %>
-          <%= user.first_name%>
           <div class="pages_thumbDiv cf">
-            <img src="<%=user.image %>"/>
+            <%= link_to(user.first_name, user, :class => "chefName") %>
+            <%= link_to(image_tag(user.image, :class => 'thumb'), user) %>
           </div>
         <% end %>
       </div>
+
     </div>
   </div>
 </div>
