--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -84,6 +84,7 @@ div {
     color: #fff;
   }
 
+
   ul li {
     font-size: 12px;
     list-style: square;
@@ -93,6 +94,9 @@ div {
 
 .main{
   padding: 60px;
+  margin: 0 auto;
+  width: 70%;
+  margin-top: 6%;
 }
 
 td, tr{
