--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,81 +1,81 @@
-<div class="main">
+<div class="main cf">
 
 <p id="notice"><%= notice %></p>
 
 <% if @current_user == @user %>
 <h1>Hello <%= @user.first_name %></h1>
-<% else %>
-<h1><%= @user.first_name %> </h1>
 <% end %>
 
+<div class="chefsViewIcon cf">
+  <h2>
+    <%= @user.first_name %> <%= @user.last_name %>
+  </h2>
+  <%= image_tag @user.image, :class => "thumb cf"%>
+</div>
 
-<%= image_tag @user.image, :class => "thumb"%>
-
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<% #only show the admin status if the current user is an admin %>
-<% if @current_user.admin? %>
+<div class="userInfo cf">
   <p>
-    <strong>Admin:</strong>
-    <%= @user.admin %>
+    <strong>Email:</strong>
+    <%= @user.email %>
   </p>
-<% end %>
 
-<% #only show the phone number if @user is a chef or current user is admin %>
-<% if @user.chef? || @current_user.admin? %>
-  <p>
-    <strong>Phone:</strong>
-    <%= @user.phone %>
-  </p>
-<% end %>
-
-<% #show host or chef depending on @user.chef status %>
-<% if @user.chef? %>
-  <p>
-    <strong>User type: </strong>
-    Chef
-  </p>
-<% elsif !@user.chef? %>
-  <p>
-    <strong>User type: </strong>
-    Host
-  </p>
-<% end %>
-
-<% #only show the chef bio, rate, and menus if they are a chef %>
-<% if @user.chef? %>
-  <p>
-    <strong>Bio:</strong>
-    <%= @user.bio %>
-  </p>
-  <p>
-    <strong>Rate:</strong>
-    <%= @user.rate %>
-  </p>
-  <strong>Menus:</strong>
-  <% @user.menus.each do |menu| %>
-    <li><%= link_to menu.title, menu %></li>
+  <% #only show the admin status if the current user is an admin %>
+  <% if @current_user.admin? %>
+    <% if @user.admin? %>
+    <p>
+      <strong>Admin: </strong><%= @user.first_name %> is also an admin
+      <%= @user.admin %>
+    </p>
+    <% end %>
+    <p>
+      <strong>Admin: </strong> <%= @user.first_name %> is not an admin
+    </p>
   <% end %>
-<% end %>
 
-<br>
-<% #only show the edit button if the current user is @user or admin %>
-<% if @current_user.admin? || @current_user.id === @user.id %>
-  <%= link_to 'Edit', edit_user_path(@user) %> |
-<% end %>
+  <% #only show the phone number if @user is a chef or current user is admin %>
+  <% if @user.chef? || @current_user.admin? %>
+    <p>
+      <strong>Phone:</strong>
+      <%= @user.phone %>
+    </p>
+  <% end %>
 
-<%= link_to 'Back', users_path %>
+  <% #show host or chef depending on @user.chef status %>
+  <% if @user.chef? %>
+    <p>
+      <strong>User type: </strong>
+      Chef
+    </p>
+  <% elsif !@user.chef? %>
+    <p>
+      <strong>User type: </strong>
+      Host
+    </p>
+  <% end %>
+
+  <% #only show the chef bio, rate, and menus if they are a chef %>
+  <% if @user.chef? %>
+    <p>
+      <strong>Bio:</strong>
+      <%= @user.bio %>
+    </p>
+    <p>
+      <strong>Rate:</strong>
+      <%= @user.rate %>
+    </p>
+    <strong>Menus:</strong>
+    <% @user.menus.each do |menu| %>
+      <li><%= link_to menu.title, menu %></li>
+    <% end %>
+  <% end %>
+
+  <br>
+    <div class="return">
+      <% #only show the edit button if the current user is @user or admin %>
+      <% if @current_user.admin? || @current_user.id === @user.id %>
+        <%= link_to 'Edit', edit_user_path(@user) %> |
+      <% end %>
+      <%= link_to 'Back', users_path %>
+    </div>
+  </div>
 </div>
