edited css / format of edit/new users _form

--- a/app/assets/stylesheets/chefs.scss
+++ b/app/assets/stylesheets/chefs.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.chefsViewIcon {
+.usersViewIcon {
   border-radius: 5px;
   width: 23%;
   float: left;
