--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,76 +11,82 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email, :required => true, :autofocus => true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name, :required => true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name, :required => true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </div>
-
-  <% #show current profile picture, or none if not present %>
-  <% #if no profile picture say "upload picture", otherwise say "update...." %>
-  <% if @user.image.present? %>
-    <strong>Current Profile Picture: </strong>
-    <%= image_tag @user.image, :class => 'thumb' %>
-    <div class="field">
-      <%= f.label :image, 'Update profile picture' %><br>
-      <%= f.file_field :image %>
-    </div>
-  <% else %>
-    <% #checks if there is no current user ie new signup and ignores the "no profile loaded" %>
-    <% if @current_user.present? %>
-      <strong>No Profile Image Loaded</strong>
+  <div class="usersViewIcon">
+    <% #show current profile picture, or none if not present %>
+    <% #if no profile picture say "upload picture", otherwise say "update...." %>
+    <% if @user.image.present? %>
+      <strong>Current Profile Picture: </strong>
+      <%= image_tag @user.image, :class => 'thumb' %>
+      <div class="field">
+        <%= f.label :image, 'Update profile picture' %><br>
+        <%= f.file_field :image %>
+      </div>
+    <% else %>
+      <% #checks if there is no current user ie new signup and ignores the "no profile loaded" %>
+      <% if @current_user.present? %>
+        <strong>No Profile Image Loaded</strong>
+      <% end %>
+      <div class="field">
+        <%= f.label :image, 'Upload profile picture' %><br>
+        <%= f.file_field :image %>
+      </div>
     <% end %>
+  </div>
+
+  <div class="userInfo">
     <div class="field">
-      <%= f.label :image, 'Upload profile picture' %><br>
-      <%= f.file_field :image %>
+      <%= f.label :email %><br>
+      <%= f.text_field :email, :required => true, :autofocus => true %>
+    </div>
+    <div class="field">
+      <%= f.label :first_name %><br>
+      <%= f.text_field :first_name, :required => true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :last_name %><br>
+      <%= f.text_field :last_name, :required => true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :phone %><br>
+      <%= f.text_field :phone %>
+    </div>
+    <div class="field">
+      <%= f.label :password %><br>
+      <%= f.password_field :password, :required => true %>
+    </div>
+
+    <div>
+      <%= f.label :password_confirmation %><br>
+      <%= f.password_field :password_confirmation, :required => true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :chef, "Are you a chef for hire?" %><br>
+      <%= f.check_box :chef, :id => 'chef-box'%>
+    </div>
+
+    <% #hide chef specific details unless chef button is ticked %>
+
+    <div class="chef-details">
+      <div class="field">
+        <%= f.label :bio %><br>
+        <%= f.text_area :bio %>
+      </div>
+
+      <div class="field">
+        <%= f.label :rate %><br>
+        <%= f.text_field :rate %>
+      </div>
+    </div>
+
+    <div class="actions">
+      <%= f.submit %>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %><br>
-    <%= f.password_field :password, :required => true %>
+
+  <%= link_to 'Back', users_path %>
+
   </div>
-
-  <div>
-    <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation, :required => true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :chef, "Are you a chef for hire?" %><br>
-    <%= f.check_box :chef, :id => 'chef-box'%>
-  </div>
-
-  <% #hide chef specific details unless chef button is ticked %>
-
-  <div class="chef-details">
-    <div class="field">
-      <%= f.label :bio %><br>
-      <%= f.text_area :bio %>
-    </div>
-
-    <div class="field">
-      <%= f.label :rate %><br>
-      <%= f.text_field :rate %>
-    </div>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
