--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 <h1>Hello <%= @user.first_name %></h1>
 <% end %>
 
-<div class="chefsViewIcon cf">
+<div class="usersViewIcon cf">
   <h2>
     <%= @user.first_name %> <%= @user.last_name %>
   </h2>
